monitoring page button layout fixes

--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -87,7 +87,7 @@ select {
 .vis-network-div {
     display:inline-block;
     width:100%;
-    height:60vh;
+    height:100%;
     margin-top: 10px;
     background-color: #FFFFFF;
 }
