Changed Navigation Layout in frontend

--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -224,3 +224,19 @@ select {
     font-family: 'Roboto';
     font-weight: 600;
 }
+
+.mdc-tab--active .mdc-tab__text-label {
+    color: white
+}
+
+.mdc-tab__text-label {
+    opacity: 1;
+}
+
+.mdc-tab-indicator>.mdc-tab-indicator__content--underline {
+    background-color: white;
+}
+
+.mdc-tab__ripple:after, .mdc-tab__ripple:before {
+    background-color: white;
+}
