Adding front end changes and generated code for sbox query string in /login

--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -240,3 +240,11 @@ select {
 .mdc-tab__ripple:after, .mdc-tab__ripple:before {
     background-color: white;
 }
+
+.menu-tabs .mdc-tab__text-label {
+    color: white;
+}
+
+.user-icon .material-icons {
+    font-size: 36px;
+}
