--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -85,7 +85,7 @@ select {
     display:inline-block;
     width:100%;
     height:100%;
-    margin-top: 10px;
+    // margin-top: 10px;
     background-color: #FFFFFF;
 }
 #vis-report {
