added latency information to network topology edges + added tooltip content for nodes & edges

--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -88,6 +88,9 @@ select {
     // margin-top: 10px;
     background-color: #FFFFFF;
 }
+div.vis-tooltip {
+    background-color: #FFFFFF;
+}
 #vis-report {
     display:inline-block;
     width:200px;
