moved help page link to topbar

--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -71,7 +71,7 @@ select {
 #meep-container {
     // height: 100%;
     width: 100%;
-    // overflow-x: hidden;
+    overflow-x: hidden;
 }
 .ui-body {
     display: flex;
