sequence diagram frontend updates

--- a/js-apps/meep-frontend/src/css/meep-controller.scss
+++ b/js-apps/meep-frontend/src/css/meep-controller.scss
@@ -288,3 +288,8 @@ div.vis-tooltip {
 .user-icon .material-icons {
     font-size: 36px;
 }
+
+// Mermaid styles
+.seq-mermaid svg {
+    height: auto;
+}
